{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 123,
  "lineage": "297f7ac1-b2de-b5d1-747b-07079f12244c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0087751711729f7c0",
            "arn": "arn:aws:ec2:ap-south-1:831161435315:elastic-ip/eipalloc-0087751711729f7c0",
            "domain": "vpc",
            "id": "eipalloc-0087751711729f7c0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-205-17.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.205.17",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task-2-NAT-EIP"
            },
            "tags_all": {
              "Name": "Task-2-NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:internet-gateway/igw-05c0dae7456693254",
            "id": "igw-05c0dae7456693254",
            "owner_id": "831161435315",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task-2-IGW"
            },
            "tags_all": {
              "Name": "Task-2-IGW"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:loadbalancer/app/test-lb-tf/7a7e4105e8642766",
            "arn_suffix": "app/test-lb-tf/7a7e4105e8642766",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1711794735.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:loadbalancer/app/test-lb-tf/7a7e4105e8642766",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-084df342bd5f35a62"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0691c3344cdcf17a5"
              },
              {
                "subnet_id": "subnet-0b5bdba6e7f9016ae"
              }
            ],
            "subnets": [
              "subnet-0691c3344cdcf17a5",
              "subnet-0b5bdba6e7f9016ae"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:loadbalancer/app/test-lb-tf/7a7e4105e8642766"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_subnet.task_2_pub_subnet_2",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:listener/app/test-lb-tf/7a7e4105e8642766/11530840d63ae867",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:targetgroup/tf-example-lb-tg/f58d6d928e87d58c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:listener/app/test-lb-tf/7a7e4105e8642766/11530840d63ae867",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:loadbalancer/app/test-lb-tf/7a7e4105e8642766",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:listener/app/test-lb-tf/7a7e4105e8642766/11530840d63ae867"
          },
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.TG",
            "aws_security_group.lb_sg",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_subnet.task_2_pub_subnet_2",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:targetgroup/tf-example-lb-tg/f58d6d928e87d58c",
            "arn_suffix": "targetgroup/tf-example-lb-tg/f58d6d928e87d58c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:targetgroup/tf-example-lb-tg/f58d6d928e87d58c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:831161435315:targetgroup/tf-example-lb-tg/f58d6d928e87d58c"
          },
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0087751711729f7c0",
            "association_id": "eipassoc-09f62fe2820922c1c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04f4f6a28574df9de",
            "network_interface_id": "eni-0d8999d47adc1f24c",
            "private_ip": "10.0.1.25",
            "public_ip": "13.127.205.17",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0691c3344cdcf17a5",
            "tags": {
              "Name": "Task-2-NAT-Gateway"
            },
            "tags_all": {
              "Name": "Task-2-NAT-Gateway"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "nat-04f4f6a28574df9de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:route-table/rtb-03bcac923353698e2",
            "id": "rtb-03bcac923353698e2",
            "owner_id": "831161435315",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f4f6a28574df9de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "rtb-03bcac923353698e2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:route-table/rtb-0d5598d29ca7a0d3f",
            "id": "rtb-0d5598d29ca7a0d3f",
            "owner_id": "831161435315",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c0dae7456693254",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Publec-Route-Table"
            },
            "tags_all": {
              "Name": "Publec-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "rtb-0d5598d29ca7a0d3f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041d48cb9ae5b6a2b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d5598d29ca7a0d3f",
            "subnet_id": "subnet-0691c3344cdcf17a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "rtbassoc-041d48cb9ae5b6a2b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Public_Route_table",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5fd49e62f626357",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d5598d29ca7a0d3f",
            "subnet_id": "subnet-0b5bdba6e7f9016ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "rtbassoc-0d5fd49e62f626357",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Public_Route_table",
            "aws_subnet.task_2_pub_subnet_2",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0fda7816cfd69a8",
            "region": "ap-south-1",
            "route_table_id": "rtb-03bcac923353698e2",
            "subnet_id": "subnet-0f42a70b421205028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "rtbassoc-0e0fda7816cfd69a8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.Private_Route_table",
            "aws_subnet.task_2_private_subnet_1",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f74a7f993e3f0b6",
            "region": "ap-south-1",
            "route_table_id": "rtb-03bcac923353698e2",
            "subnet_id": "subnet-092f33e422eda1d10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "rtbassoc-04f74a7f993e3f0b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.Private_Route_table",
            "aws_subnet.task_2_private_subnet_2",
            "aws_subnet.task_2_pub_subnet_1",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:security-group/sg-084df342bd5f35a62",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084df342bd5f35a62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "831161435315",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB-SG"
            },
            "tags_all": {
              "Name": "LB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "sg-084df342bd5f35a62",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:security-group/sg-0e5532dadeba309df",
            "description": "Allow HTTP onley",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5532dadeba309df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084df342bd5f35a62"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-ec2-sg",
            "name_prefix": "",
            "owner_id": "831161435315",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-EC2-SG"
            },
            "tags_all": {
              "Name": "Private-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "sg-0e5532dadeba309df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_2_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:subnet/subnet-0f42a70b421205028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f42a70b421205028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831161435315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "subnet-0f42a70b421205028",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_2_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:subnet/subnet-092f33e422eda1d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092f33e422eda1d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831161435315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "subnet-092f33e422eda1d10",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_2_pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:subnet/subnet-0691c3344cdcf17a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0691c3344cdcf17a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831161435315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "subnet-0691c3344cdcf17a5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task_2_pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:subnet/subnet-0b5bdba6e7f9016ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5bdba6e7f9016ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831161435315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0bf3e299d61ff3e24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "subnet-0b5bdba6e7f9016ae",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Task_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Task_2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831161435315:vpc/vpc-0bf3e299d61ff3e24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c50433d3c1928743",
            "default_route_table_id": "rtb-0ec8dc585ecf66665",
            "default_security_group_id": "sg-0fffe59f678fcf6dd",
            "dhcp_options_id": "dopt-047c0e127a700e681",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf3e299d61ff3e24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec8dc585ecf66665",
            "owner_id": "831161435315",
            "region": "ap-south-1",
            "tags": {
              "Name": "Task-2-dev-vpc"
            },
            "tags_all": {
              "Name": "Task-2-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "831161435315",
            "id": "vpc-0bf3e299d61ff3e24",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}